--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
 
             <div id="acessibilidade" class="menu-acessibilidade">
-                         
+                <button id="botão-acessibilidade"class="btn btn-primary fw-bold">acessibilidade</button>         
                     <button id="aumentar-fonte" class="btn btn-primary fw-bold">A +</button>
                     
                     <button id="diminuir-fonte" class="btn btn-primary fw-bold">A -</button>
