--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             </ul>
 
             <div id="acessibilidade" class="menu-acessibilidade">
-                <button id="botão-acessibilidade"class="btn btn-primary fw-bold">acessibilidade</button>     
-                <div ide="opções-acessibilidade">    
+                <button id="botão-acessibilidade"class="btn btn-primary fw-bold">acessibilidade</button>   
+                rotação-botão">acessibilidade</button>  
+                <div ide="opções-acessibilidade" class="opções-acessibilidade apresenta lista"> 
                     <button id="aumentar-fonte" class="btn btn-primary fw-bold">A +</button>
                     
                     <button id="diminuir-fonte" class="btn btn-primary fw-bold">A -</button>
